Add simple UKBuildings read functionality

--- a/notebooks/test-data-generator.ipynb
+++ b/notebooks/test-data-generator.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook generates the UKMap test input."
+    "# Test Data Generator\n",
+    "\n",
+    "This notebook generates the test input used in the unit tests."
    ]
   },
   {
@@ -26,7 +28,8 @@
    "outputs": [],
    "source": [
     "PATH_TO_HB0101 = '../tests/resources/productionblockfiles/HB0101-something.shp'\n",
-    "PATH_TO_HB0102 = '../tests/resources/productionblockfiles/somethingHB0102more.shp'"
+    "PATH_TO_HB0102 = '../tests/resources/productionblockfiles/somethingHB0102more.shp'\n",
+    "PATH_TO_UK_BUILDINGS_DATA = '../tests/resources/ukbuildings.shp'"
    ]
   },
   {
@@ -44,6 +47,13 @@
     "       'units': 'm',\n",
     "       'x_0': 400000,\n",
     "       'y_0': -100000}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## UKMap"
    ]
   },
   {
@@ -81,6 +91,38 @@
    "source": [
     "generate_HB0101()\n",
     "generate_HB0102()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## UKBuildings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_uk_buildings_data():\n",
+    "    geometries = [Point(x, y) for x in range(500000, 590000, 10000) for y in range(100000, 190000, 10000)]\n",
+    "    test_data = gpd.GeoDataFrame(\n",
+    "        geometry=geometries,\n",
+    "        crs=CRS\n",
+    "    )\n",
+    "    test_data.plot()\n",
+    "    test_data.to_file(PATH_TO_UK_BUILDINGS_DATA)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_uk_buildings_data()"
    ]
   },
   {
