Add data type conversion for UKBuildings

--- a/notebooks/test-data-generator.ipynb
+++ b/notebooks/test-data-generator.ipynb
@@ -106,10 +106,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "UK_BUILDING_COLUMNS = [\n",
+    "    'BASE',\n",
+    "    'SBC'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def generate_uk_buildings_data():\n",
     "    geometries = [Point(x, y) for x in range(500000, 590000, 10000) for y in range(100000, 190000, 10000)]\n",
     "    test_data = gpd.GeoDataFrame(\n",
     "        geometry=geometries,\n",
+    "        data={col_name: [1]*len(geometries) for col_name in UK_BUILDING_COLUMNS},\n",
     "        crs=CRS\n",
     "    )\n",
     "    test_data.plot()\n",
